# cyber-streamer

./: .envrc_docker  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  e2e_test.sh  justfile  pyproject.toml
.github/workflows/: ci.yml
app/: constants.py  main.py  utils.py
app/models/: __init__.py  marketing_mix_modelling.py  media_channel_radio.py  media_channel_tv.py  sales.py
app/processor/: __init__.py  silver_proc.py
app/service/: routers.py
deploy/: service.yaml
src/app/: constants.py  generator.py  llm.py  main.py  utils.py
src/app/config/: config.yaml
src/app/models/: __init__.py  fraud.py  marketing_mix_modelling.py
src/app/processor/: silver_proc.py
src/app/service/: fraud_service.py  llm_provider.py  ollama_provider.py  routers.py
tests/: conftest.py  test_fraud_detection.py  test_generator.py  test_llm.py  test_llm_provider.py  test_main.py  test_media_radio_proto.py  test_media_tv_proto.py  test_ollama_provider.py  test_routers.py  test_sale_proto.py  test_silver_proc.py
tests/samples/: media_channel_radio.json  media_channel_tv.json
