[project]
name = "fkl-streamer"
version = "0.3.0"
description = "FastAPI streamer from Kafka to Lakehouse on delta lake"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Stefano Lori", email = "wolliq@gmail.com" }
]
dependencies = [
    "pydantic>=2.10.6",
    "faststream[cli]>=0.5.34",
    "aiokafka>=0.12.0",
    "fastapi[standard]>=0.115.8",
    "confluent-kafka>=2.8.0",
    "deltalake>=0.24.0",
    "polars>=1.21.0",
    "pandas>=2.2.3",
    "pre-commit>=4.5.1",
    "requests>=2.32.3",
    "redis>=5.0.0",
    "loguru>=0.7.2",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "pylint>=3.3.4",
    "protobuf>=6.33.5",
    "mypy>=1.15.0",
    "ruff>=0.9.6",
    "types-requests>=2.32.0.20241016",
    "pytest-cov>=6.0.0",
    "bandit>=1.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/app"]

[tool.ruff]
exclude = ["*_pb2.py", ".venv"]

[tool.mypy]
exclude = [".*_pb2\\.py", ".venv"]

[tool.pylint.master]
ignore-patterns = ".*_pb2.py"

[tool.pylint.messages_control]
disable = [
    "C0114", # missing-module-docstring
    "C0115", # missing-class-docstring
    "C0116", # missing-function-docstring
    "R0801", # duplicate-code
    "W0511", # fixme
    "R0903", # too-few-public-methods
]

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B311"]
